# Ninja-Siege

./: .gitignore  CMakeLists.txt  Makefile.common  Vagrantfile  metadata.ini
lib/SDL_mixer/linux/debug/: libSDL_mixer-1.2.so.0.12.0  libSDL_mixer.la  libSDL_mixer.lai  libsmpeg-0.4.so.0  libsmpeg.lai
lib/SDL_mixer/linux/release/: libsmpeg-0.4.so.0  libsmpeg.la
lib/SDL_net/linux/debug/: libSDL_net.la  libSDL_net.lai
linux/: create_installer.sh
maker/: build.sh
maker/linux/: Linux.cmake
resources/font/: Readme.txt
scripts/util/: teste
src/: .gitignore  CMakeLists.txt  main.cpp
src/game/include/: ambiente.h  botao.h  desenhavel.h  escutavel.h  fading.h  hud.h  logofading.h  mapa.h  menuprincipal.h  mestre.h  tela.h
src/game/src/: ambiente.cpp  botao.cpp  escutavel.cpp  fading.cpp  hud.cpp  inimigo.cpp  jogo.cpp  jogo_detectarSaidaAplicativo.cpp  jogo_detectarTodosEventos.cpp  jogo_estadoEntradaJogo.cpp  jogo_estadoFimJogo.cpp  jogo_estadoJogando.cpp  jogo_estadosInternos.cpp  logofading.cpp  mapa.cpp  menuprincipal.cpp  mestre.cpp  tela.cpp  tempo.cpp
